--- a/kotitehtavat/style.css
+++ b/kotitehtavat/style.css
@@ -45,7 +45,6 @@ h2 {
     border-bottom: 2px solid #444;
     padding-bottom: 5px;
     color: #555;
-    margin-top: 40px;
 }
 
 /* Taulukko */
@@ -99,14 +98,14 @@ legend {
     font-weight: bold;
     padding: 0 10px;
     color: #555;
-    font-size: 12px;
+    font-size: 1.5em;
 }
 
 label {
     font-weight: bold;
 }
 
-input[type="text"], textarea, select {
+input[type="text"], input[type="email"], input[type="password"], textarea, select {
     width: 100%;
     padding: 10px;
     margin: 10px 0;
@@ -157,7 +156,7 @@ input[type="submit"]:hover {
     }
 
     legend {
-        font-size: 14px;
+        font-size: 1.2em;
     }
 
     input[type="submit"] {
