--- a/kotitehtavat/asemointiprojekti/style.css
+++ b/kotitehtavat/asemointiprojekti/style.css
@@ -10,6 +10,7 @@ body {
     background-attachment: fixed;
   }
 
+  /* Navigaation asetukset */
   nav {
     text-align: center;
     padding: 20px 0px;
@@ -25,7 +26,7 @@ body {
 }
 
 .logo {
-    position: absolute; /* Sijoittaa logon absoluuttisesti nav-kontin sisällä */
+    position: absolute;
     left: 35px;
 }
 
@@ -66,7 +67,7 @@ nav > ul > li > a:hover {
   
   /* Keskitä sailio-divi ja määrittele leveys */
   #sailio {
-    max-width: 1000px;
+    max-width: 1090px;
     margin: 40px auto;
     display: grid;
     grid-template-columns: 200px 650px 200px;
@@ -126,7 +127,8 @@ nav > ul > li > a:hover {
     margin: 10px 0;
     line-height: 1.6;
   }
-  
+
+  /* Footerin asetukset */
   footer {
     margin: auto;
     text-align: center;
