--- a/kukkakauppa/style.css
+++ b/kukkakauppa/style.css
@@ -1,18 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Roboto+Slab:wght@100..900&display=swap');
 
 html, body {
+    height: 100%;
     margin: 0px;
-    background-color: #aedbe2;
+    background-color: #E6D2D1;
     font-family: "Roboto Slab", serif;
     color: #333;
 }
 
+.banner-wrapper {
+    background-image: url(img/banner.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 400px;
+    margin-top: 80px;
+    text-align: center;
+}
+
+.banner-wrapper h1 {
+    font-size: 4em;
+    position: relative;
+    top: 40%;
+}
+
 body > .container {
+    height: 100%;
     background-color: #fff;
     width: 70%;
     margin: auto;
     padding: 10px 40px;
-    margin-top: 80px;
 }
 
 nav {
@@ -28,10 +45,11 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 2;
 }
 
 .logo {
-    position: absolute;
+    position: absolute; /* Sijoittaa logon absoluuttisesti nav-kontin sisällä */
     left: 35px;
 }
 
@@ -74,41 +92,21 @@ h1 {
 
 h2 {
     font-size: 1.8em;
+    color: #005D57;
 }  
 
 a {
     text-decoration: none;
-    color: #15abb0;
+    color: #005D57;
 }
 
 a:hover {
     color: #2B2B2B;
 }
 
-.flexContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 20px;
-    margin-bottom: 70px;
-}
-
-.sailio {
-    width: calc(25% - 20px);
-    margin-bottom: 20px;
-}
-
-.sailio img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.kuvaus {
-    text-align: center;
-}
-
-footer {
+body > footer {
+    position: sticky;
+    top: 100vh;
     margin: auto;
     text-align: center;
     padding: 5px;
@@ -118,7 +116,7 @@ footer {
 }
 
 /* Responsiivisuus */
-@media (max-width: 860px) {
+@media (max-width: 768px) {
     nav .menu-icon {
         display: block;
         font-size: 3em;
@@ -148,15 +146,5 @@ footer {
 
     nav > ul > li > a:hover {
         color: #fff;
-    }
-
-    .sailio {
-        width: calc(50% - 20px);
-    }
-}
-
-@media (max-width: 536px) {
-    .sailio {
-        width: 100%;
     }
 }
