--- a/kukkakauppa/style.css
+++ b/kukkakauppa/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Great+Vibes&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-/* General styles */
+/* General styling */
 html,
 body {
   margin: 0px;
@@ -32,10 +32,6 @@ h3 {
   line-height: 0.6;
 }
 
-.bold {
-  font-weight: bold;
-}
-
 a {
   text-decoration: none;
   color: #e16a8b;
@@ -43,6 +39,10 @@ a {
 
 a:hover {
   color: #2b2b2b;
+}
+
+.bold {
+  font-weight: bold;
 }
 
 .container {
@@ -55,14 +55,6 @@ a:hover {
 
 .center-block {
   margin: auto;
-}
-
-.flex-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 20px;
-  margin: 40px 0px;
 }
 
 .center-block button {
@@ -97,6 +89,55 @@ a:hover {
 
 .center-block button a:hover {
   color: #fff;
+}
+
+/* Flex styling */
+.flex-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+  margin: 40px 0px;
+}
+
+.outer-wrapper {
+  background-color: #fff;
+  margin: 30px 0px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.outer-wrapper > .flex-wrapper {
+  margin: 0px;
+}
+
+.inner-block {
+  width: calc(50% - 20px);
+}
+
+.inner-text {
+  align-self: center;
+}
+
+.inner-block h3 {
+  line-height: 1;
+  margin: 10px 0;
+}
+
+.outer-wrapper > .flex-wrapper > .inner-block > p {
+  margin: 0px;
+}
+
+.outer-wrapper > .flex-wrapper > .inner-block > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.flex-wrapper > .inner-block > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /* Nav */
@@ -385,41 +426,6 @@ input[type="submit"]:hover {
   overflow: hidden;
 }
 
-/* Products */
-.product-wrapper {
-  background-color: #fff;
-  margin: 30px 0px;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-.product-wrapper > .flex-wrapper {
-  margin: 0px;
-}
-
-.product-block {
-  width: calc(50% - 20px);
-}
-
-.product-text {
-  align-self: center;
-}
-
-.product-block h3 {
-  line-height: 1;
-  margin: 10px 0;
-}
-
-.product-wrapper > .flex-wrapper > .product-block > p {
-  margin: 0px;
-}
-
-.product-wrapper > .flex-wrapper > .product-block > img {
-  width: 100%;
-  height: 400px;
-  object-fit: cover;
-}
-
 /* Footer */
 footer {
   text-align: center;
@@ -428,6 +434,10 @@ footer {
   background-color: #1c1c1c;
   font-size: 1rem;
   line-height: 0.8;
+}
+
+footer .flex-wrapper {
+  margin: 0
 }
 
 .footer-wrapper {
@@ -519,7 +529,7 @@ footer {
     width: 100%;
   }
 
-  .product-block {
+  .inner-block {
     width: 100%;
   }
 
