--- a/kukkakauppa/style.css
+++ b/kukkakauppa/style.css
@@ -41,10 +41,6 @@ a:hover {
   color: #2b2b2b;
 }
 
-.bold {
-  font-weight: bold;
-}
-
 .container {
   width: 70%;
   max-width: 1200px;
@@ -54,7 +50,9 @@ a:hover {
 }
 
 .center-block {
-  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .center-block button {
@@ -430,6 +428,7 @@ input[type="submit"]:hover {
 footer {
   text-align: center;
   padding: 5px;
+  margin-top: 30px;
   color: #f9f9f9;
   background-color: #1c1c1c;
   font-size: 1rem;
