--- a/kukkakauppa/style.css
+++ b/kukkakauppa/style.css
@@ -89,6 +89,13 @@ a:hover {
   color: #fff;
 }
 
+.error {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  color: white;
+  background-color: #e57373;
+}
+
 /* Flex styling */
 .flex-wrapper {
   display: flex;
